@@ -1,3 +1,12 @@
+2008-05-05  kitone  <kitone@gna.org>
+
+	* src/SubtitleView.cc:
+	* src/SubtitleView.h:
+	Add function get_column_label_by_name.
+
+	* src/actions/ViewManager.cc:
+	Uses the label of the column rather than the internal name.
+
 2008-05-04  kitone  <kitone@gna.org>
 
 	* configure.in:
